geolocation/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geolocation
  namespace: bicycle-network
spec:
  selector:
    app: geolocation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
